# bookclub-islp

./: .gitignore  .nojekyll  .vdoc.py  .vdoc.r  01_main.html  01_main.qmd  01_notes.html  01_notes.qmd  01_video.html  01_video.qmd  02_exercises.html  02_exercises.qmd  02_main.html  02_main.qmd  02_notes.html  02_notes.qmd  02_video.html  03_exercises.html  03_main.html  03_main.qmd  03_notes.html  03_notes.ipynb  03_notes.qmd  03_video.html  04_exercises.html  04_main.html  04_main.qmd  04_notes.html  04_notes.qmd  04_presentation.qmd  04_video.html  05_exercises.html  05_main.html  05_main.qmd  05_notes.html  05_notes.qmd  05_video.html  06_exercises.html  06_exercises.qmd  06_main.html  (+61 more)
.github/workflows/: deploy_quarto.yml  pr_check.yml
_freeze/01_notes/execute-results/: html.json
_freeze/02_exercises/execute-results/: html.json
_freeze/02_notes/execute-results/: html.json
_freeze/03_notes/execute-results/: html.json
_freeze/04_main/execute-results/: html.json
_freeze/04_notes/execute-results/: html.json
_freeze/05_notes/execute-results/: html.json
_freeze/08_notes/execute-results/: html.json
_freeze/example_quarto/execute-results/: html.json
data/: Hitters.csv
site_libs/bootstrap/: bootstrap-5fed136cbb581ab3aba52b0d178f5f09.min.css  bootstrap-94132a13eab211b38f999440e910a243.min.css  bootstrap-9e1954d45f3dd01da8ddd802a33ecb74.min.css  bootstrap-dark-0204ecbfb8a16f1d6bd85439096a7cdd.min.css  bootstrap-e6f626c662a91eeead3924920b920f6f.min.css  bootstrap.min.css
